@@ -3,6 +3,7 @@ procps-3.2.1 --> procps-3.2.2
 avoid warning about -lncurses when not linking -- thanks FLWM
 ps: personality-specific -x support (HP-UX and SVR4-MP)
 ps: k option, same as --sort
+vmstat: fixed -d
 
 procps-3.2.0 --> procps-3.2.1
 
